다크모드 테스트중

--- a/html/setup/screen_mode.html
+++ b/html/setup/screen_mode.html
@@ -44,7 +44,7 @@
               <div class="scr-select">
                 <div>배경<span class="blind">선택</span></div>
               </div>
-              <div class="screen-lst light">
+              <div class="screen-lst light-mode">
                 <button type="button" id="btnLight">
                   <div class="screen-inner">
                     <div class="product">
@@ -58,7 +58,7 @@
                   </div>
                 </button>
               </div>
-              <div class="screen-lst dark">
+              <div class="screen-lst dark-mode">
                 <button type="button" id="btnDark">
                   <div class="screen-inner">
                     <div class="product">
