상품목록 추가

--- a/html/products/list_food.html
+++ b/html/products/list_food.html
@@ -38,21 +38,43 @@
           </button>
         </header>
         <main id="contents">
-          <section>
-            <h3>
-              <div>2.<span class="blind">층</span></div>
-              <div>식품</div>
-            </h3>
+          <section class="sector-category cate1">
+            <h3 class="category" aria-label="카테고리">식품</h3>
           </section>
           <section>
             <h3 class="blind">상품목록</h3>
-            <ul>
+            <ul class="list-product">
               <li>
-                <a href="#">
-                  <h4>
-                    <div>동구밭 지구살림</div>
-                    클래식 우유식빵
-                  </h4>
+                <a href="#" class="item">
+                  <div class="product-info">
+                    <h4 class="title">
+                      <div class="smt">동구밭 지구살림</div>
+                      클래식 우유식빵
+                    </h4>
+                    <div class="price">13,000<span class="blind">원</span></div>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="item">
+                  <div class="product-info">
+                    <h4 class="title">
+                      <div class="smt">동구밭 지구살림</div>
+                      DOLE 실속 바나나 1kg
+                    </h4>
+                    <div class="price">8,000<span class="blind">원</span></div>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="item">
+                  <div class="product-info">
+                    <h4 class="title">
+                      <div class="smt">마켓컬리</div>
+                      표고버섯 100g
+                    </h4>
+                    <div class="price">2,490<span class="blind">원</span></div>
+                  </div>
                 </a>
               </li>
             </ul>
