상품상세페이지 작업

--- a/html/products/list_food.html
+++ b/html/products/list_food.html
@@ -39,9 +39,9 @@
         </header>
         <main id="contents">
           <section class="sector-category cate1">
-            <h3 class="category" aria-label="카테고리">식품</h3>
+            <h3 class="category-tit" aria-label="카테고리">식품</h3>
           </section>
-          <section>
+          <section class="prodlist-wrap">
             <h3 class="blind">상품목록</h3>
             <ul class="list-product">
               <li>
