--- a/html/products/view.html
+++ b/html/products/view.html
@@ -38,52 +38,101 @@
           </button>
         </header>
         <main id="contents">
-          <section class="sector-category cate1">
-            <h3 class="category" aria-label="카테고리">생활건강</h3>
-            <h4>
-              <div class="smt">동구밭 지구살림</div>
-              클래식 우유식빵
-            </h4>
-            <div class="price">8,000<span class="blind">원</span></div>
-          </section>
-          <section>
-            <h3 class="blind">상품목록</h3>
-            <ul class="list-product">
-              <li>
-                <a href="#" class="item">
-                  <div class="product-info">
-                    <h4 class="title">
-                      <div class="smt">동구밭 지구살림</div>
-                      클래식 우유식빵
-                    </h4>
-                    <div class="price">13,000<span class="blind">원</span></div>
+          <div class="product-detail">
+            <section class="sector-detail cate1">
+              <h3 class="category-tit" aria-label="카테고리">생활건강</h3>
+              <section class="detail-title">
+                <h4>
+                  <div class="smt">동구밭 지구살림</div>
+                  귤 천연 설거지 비누 워싱바
+                </h4>
+                <div class="price">4,500원</div>
+              </section>
+
+              <!-- 제품이미지 영역(s) -->
+              <figure class="detail-img">
+                <img src="../../resources/images/product/product_detail.png" alt="동구밭 풋귤 설거지 비누 DONGGUBAT Green Tangerine Dish Soap 100g 위생용품 제품이미지" />
+              </figure>
+              <!--// 제품이미지 영역(e) -->
+            </section>
+
+            <!-- 제품설명 영역(s) -->
+            <article class="product-info">
+              <div class="prd-inner">
+                <div class="prd-txt1">
+                  제주산 풋귤<br />
+                  싱그러운 풋귤이 깨끗하고 상쾌한 설거지를 도와주며 각종 비타민과 시네프린을 함유하고 있어 건조함으로 인한 가려움 완화에 도움을 줍니다.
+                </div>
+              </div>
+              <!-- 제품설명 이미지 영역(s) -->
+              <figure class="prd-img figcaption-ocr">
+                <img src="../../resources/images/product/product_info1.png" alt="이미지 설명 있음" />
+                <!-- OCR 적용(s) -->
+                <figcaption>
+                  <div>CHECK POINT</div>
+                  <ul>
+                    <li>1. 청정 제주 업사이클 성분</li>
+                    <li>2. CP 공법 식약처 고시 1종 세척제</li>
+                    <li>3. 풍성함 거품과 탁월한 세정력</li>
+                    <li>4. 환경 친화적인 종이 패키지</li>
+                  </ul>
+                </figcaption>
+                <!--// OCR 적용(e) -->
+              </figure>
+              <!--// 제품설명 이미지 영역(e) -->
+
+              <div class="prd-topview">
+                <div class="prd-inner">
+                  <div class="prd-txt1">
+                    청정 제주<br />
+                    업사이클링 성분
                   </div>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="item">
-                  <div class="product-info">
-                    <h4 class="title">
-                      <div class="smt">동구밭 지구살림</div>
-                      DOLE 실속 바나나 1kg
-                    </h4>
-                    <div class="price">8,000<span class="blind">원</span></div>
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="item">
-                  <div class="product-info">
-                    <h4 class="title">
-                      <div class="smt">마켓컬리</div>
-                      표고버섯 100g
-                    </h4>
-                    <div class="price">2,490<span class="blind">원</span></div>
-                  </div>
-                </a>
-              </li>
-            </ul>
-          </section>
+                  <p class="prd-txt2 mt1">
+                    제주산 풋귤<br />
+                    싱그러운 풋귤이 깨끗하고 상쾌한 설거지를 도와주며 각종 비타민과 시네프린을 함유하고 있어 건조함으로 인한 가려움 완화에 도움을 줍니다.
+                  </p>
+                  <p class="prd-txt3">*상기 내용은 원료적 특성에 한함</p>
+                </div>
+              </div>
+            </article>
+            <!--// 제품설명 영역(e) -->
+
+            <article></article>
+
+            <!-- 제품배송 및 상세알림 영역(s) -->
+            <article>
+              <div>
+                <ul>
+                  <li>
+                    <div>배송비</div>
+                    <p>(30,000원 이상 구입 시 무료)</p>
+                  </li>
+                  <li>
+                    <div>배송정보</div>
+                    <p>3일이내 발송(토,일 공휴일제외)</p>
+                  </li>
+                  <li>
+                    <div>제조사/원산지</div>
+                    <p>양품계획/MADE IN VIETNAM</p>
+                  </li>
+                  <li>
+                    <div>상품코드</div>
+                    <p>4550182107166</p>
+                  </li>
+                </ul>
+              </div>
+            </article>
+            <!--// 제품배송 및 상세알림 영역(e) -->
+          </div>
+
+          <!-- 하단 고정 버튼(s) -->
+          <div class="btn-wrap btm-fixed">
+            <div class="btn-flex">
+              <a href="#" class="btn no-radius btype-big btclr-gray900 fl1"><span>음성주문</span></a>
+              <button type="button" class="btn btype-big btclr-accent no-radius fl2"><span>장바구니에 추가</span></button>
+            </div>
+          </div>
+          <!--// 하단 고정 버튼(e) -->
         </main>
       </div>
     </div>
