--- a/html/products/list_living.html
+++ b/html/products/list_living.html
@@ -39,9 +39,9 @@
         </header>
         <main id="contents">
           <section class="sector-category cate2">
-            <h3 class="category" aria-label="카테고리">생활건강</h3>
+            <h3 class="category-tit" aria-label="카테고리">생활건강</h3>
           </section>
-          <section>
+          <section class="prodlist-wrap">
             <h3 class="blind">상품목록</h3>
             <ul class="list-product">
               <li>
@@ -62,22 +62,28 @@
                 <a href="#" class="item">
                   <div class="product-info">
                     <h4 class="title">
-                      <div class="smt">동구밭 지구살림</div>
-                      DOLE 실속 바나나 1kg
+                      <div class="smt">부케가르니</div>
+                      부케가르니 에코 클리어 세탁 액상세제
                     </h4>
-                    <div class="price">8,000<span class="blind">원</span></div>
+                    <div class="price">23,280<span class="blind">원</span></div>
                   </div>
+                  <figure class="product-img">
+                    <img src="../../resources/images/product/product_img4.png" alt="부케가르니 에코 클리어 세탁 액상세제 제품이미지" />
+                  </figure>
                 </a>
               </li>
               <li>
                 <a href="#" class="item">
                   <div class="product-info">
                     <h4 class="title">
-                      <div class="smt">마켓컬리</div>
-                      표고버섯 100g
+                      <div class="smt">부케가르니</div>
+                      부케가르니 나드 구취케어 치약 100g, 3개
                     </h4>
-                    <div class="price">2,490<span class="blind">원</span></div>
+                    <div class="price">23,280<span class="blind">원</span></div>
                   </div>
+                  <figure class="product-img">
+                    <img src="../../resources/images/product/product_img5.png" alt="부케가르니 나드 구취케어 치약 100g 제품이미지" />
+                  </figure>
                 </a>
               </li>
             </ul>
