음성주문하기

--- a/html/products/list_beauty.html
+++ b/html/products/list_beauty.html
@@ -45,7 +45,7 @@
             <h3 class="blind">상품목록</h3>
             <ul class="list-product">
               <li>
-                <a href="#" class="item">
+                <a href="./view.html" class="item">
                   <div class="product-info">
                     <h4 class="title">
                       <div class="smt">올리브영</div>
@@ -61,7 +61,7 @@
             </ul>
             <ul class="list-product type2">
               <li>
-                <a href="#" class="item">
+                <a href="./view.html" class="item">
                   <div class="product-info">
                     <h4 class="title">
                       <div class="smt">올리브영</div>
@@ -74,7 +74,7 @@
                 </a>
               </li>
               <li>
-                <a href="#" class="item">
+                <a href="./view.html" class="item">
                   <div class="product-info">
                     <h4 class="title">
                       <div class="smt">폴레스트스토리</div>
