--- a/html/products/view.html
+++ b/html/products/view.html
@@ -58,7 +58,7 @@
 
             <!-- 제품설명 영역(s) -->
             <article class="product-info">
-              <div class="prd-inner">
+              <div class="prd-headtext">
                 <div class="prd-txt1">
                   제주산 풋귤<br />
                   싱그러운 풋귤이 깨끗하고 상쾌한 설거지를 도와주며 각종 비타민과 시네프린을 함유하고 있어 건조함으로 인한 가려움 완화에 도움을 줍니다.
@@ -81,8 +81,8 @@
               </figure>
               <!--// 제품설명 이미지 영역(e) -->
 
-              <div class="prd-topview">
-                <div class="prd-inner">
+              <div class="prd-inner">
+                <div class="prd-topview">
                   <div class="prd-txt1">
                     청정 제주<br />
                     업사이클링 성분
@@ -93,34 +93,53 @@
                   </p>
                   <p class="prd-txt3">*상기 내용은 원료적 특성에 한함</p>
                 </div>
+
+                <div class="prdinfo">
+                  <figure>
+                    <img src="../../resources/images/product/product_info2.png" alt="" />
+                  </figure>
+                  <div class="prd-txt1">안심하고 사용하세요.</div>
+                  <p class="prd-txt2">CP공법 식약처 고시 1종 제척제로 식기, 채소, 과일, 유아용까지 모두 세척할 수 있습니다.</p>
+                </div>
+
+                <div class="prdinfo">
+                  <figure>
+                    <img src="../../resources/images/product/product_info3.png" alt="" />
+                  </figure>
+                  <p class="prd-txt2">계면활성제가 가득한 값싼 비누 베이스가 아닌 고농도 식물 유래 성분들을 배학해 낮은 온도에서 오랜 시간 숙성하는 비누 공법으로 재조하였습니다.</p>
+                </div>
+
+                <div class="prdinfo">
+                  <figure>
+                    <img src="../../resources/images/product/product_info4.png" alt="" />
+                  </figure>
+                  <div class="prd-txt1">
+                    풍성한 거품과<br />
+                    탁월한 세정력
+                  </div>
+                  <p class="prd-txt2">단단하게 생성되는 풍성하고 조밀한 거품은 기름기까지 남김없이 닦아내는 뛰어난 세정력으로 상쾌한 설거지가 가능합니다.</p>
+                </div>
               </div>
             </article>
             <!--// 제품설명 영역(e) -->
 
-            <article></article>
-
             <!-- 제품배송 및 상세알림 영역(s) -->
-            <article>
-              <div>
-                <ul>
-                  <li>
-                    <div>배송비</div>
-                    <p>(30,000원 이상 구입 시 무료)</p>
-                  </li>
-                  <li>
-                    <div>배송정보</div>
-                    <p>3일이내 발송(토,일 공휴일제외)</p>
-                  </li>
-                  <li>
-                    <div>제조사/원산지</div>
-                    <p>양품계획/MADE IN VIETNAM</p>
-                  </li>
-                  <li>
-                    <div>상품코드</div>
-                    <p>4550182107166</p>
-                  </li>
-                </ul>
-              </div>
+            <article class="product-notice">
+              <h5 class="note-tit">제품정보</h5>
+              <ul class="note-list">
+                <li>
+                  <div class="st">품명</div>
+                  <p>동구밭 설거지비누 풋귤</p>
+                </li>
+                <li>
+                  <div class="st">성분명</div>
+                  <p>코코넛오일, 정제수, 해바라기씨유, 올리브유, 수산화나트륨, 오렌지껍질오일, 귤껍질분말(4,000ppm), 귤추출뮬(3,000ppm), 아몬드오일, 피마자유, 리모넨</p>
+                </li>
+                <li>
+                  <div class="st">품질보증기준</div>
+                  <p>본 제품에 이상이 있을 경우 공정거래위원회 고시 소비자분쟁해결 기준에 의거하여 보상받을 수 있습니다.</p>
+                </li>
+              </ul>
             </article>
             <!--// 제품배송 및 상세알림 영역(e) -->
           </div>
@@ -128,7 +147,7 @@
           <!-- 하단 고정 버튼(s) -->
           <div class="btn-wrap btm-fixed">
             <div class="btn-flex">
-              <a href="#" class="btn no-radius btype-big btclr-gray900 fl1"><span>음성주문</span></a>
+              <a href="./order.html" class="btn no-radius btype-big btclr-gray900 fl1"><span>음성주문</span></a>
               <button type="button" class="btn btype-big btclr-accent no-radius fl2"><span>장바구니에 추가</span></button>
             </div>
           </div>
