--- a/html/setup/screen_mode.html
+++ b/html/setup/screen_mode.html
@@ -45,7 +45,7 @@
                 <div>배경<span class="blind">선택</span></div>
               </div>
               <div class="screen-lst light-mode">
-                <button type="button" id="btnLight">
+                <button type="button" id="btnLight" onclick="location.href='../products/list_living.html';">
                   <div class="screen-inner">
                     <div class="product">
                       <h3 class="tit">
