--- a/html/products/list_food.html
+++ b/html/products/list_food.html
@@ -45,7 +45,7 @@
             <h3 class="blind">상품목록</h3>
             <ul class="list-product">
               <li>
-                <a href="#" class="item">
+                <a href="./view.html" class="item">
                   <div class="product-info">
                     <h4 class="title">
                       <div class="smt">동구밭 지구살림</div>
@@ -56,7 +56,7 @@
                 </a>
               </li>
               <li>
-                <a href="#" class="item">
+                <a href="./view.html" class="item">
                   <div class="product-info">
                     <h4 class="title">
                       <div class="smt">동구밭 지구살림</div>
@@ -67,7 +67,7 @@
                 </a>
               </li>
               <li>
-                <a href="#" class="item">
+                <a href="./view.html" class="item">
                   <div class="product-info">
                     <h4 class="title">
                       <div class="smt">마켓컬리</div>
