장바구니 추가

--- a/html/products/order.html
+++ b/html/products/order.html
@@ -33,7 +33,7 @@
       <div class="container">
         <h1>소수자를 위한 쇼핑몰 | whispers shop</h1>
         <main id="contents">
-          <div class="order-cont">
+          <div class="buy-cont">
             <h3>귤 천연 설거지 비누 워싱바를 주문을 시작합니다.</h3>
             <div class="order-talk">
               <div class="talk seller bal1">
