--- a/html/products/view.html
+++ b/html/products/view.html
@@ -148,7 +148,7 @@
           <div class="btn-wrap btm-fixed">
             <div class="btn-flex">
               <a href="./order.html" class="btn no-radius btype-big btclr-gray900 fl1"><span>음성주문</span></a>
-              <button type="button" class="btn btype-big btclr-accent no-radius fl2"><span>장바구니에 추가</span></button>
+              <a href="./cart.html" class="btn btype-big btclr-accent no-radius fl2"><span>장바구니에 추가</span></a>
             </div>
           </div>
           <!--// 하단 고정 버튼(e) -->
