페이지 작업

--- a/html/intro/intro.html
+++ b/html/intro/intro.html
@@ -53,8 +53,8 @@
           </section>
           <section class="btn-wrap btm-fixed">
             <div class="btn-inner">
-              <a href="../setup/size.html" class="btn btype-regular btclr-accent"><span>카카오로 회원가입</span></a>
-              <a href="../setup/size.html" class="btn btype-small btclr-transparent"><span>휴대폰인증으로 가입하기</span></a>
+              <a href="../setup/screen_mode.html" class="btn btype-regular btclr-accent"><span>카카오로 회원가입</span></a>
+              <a href="../setup/screen_mode.html" class="btn btype-small btclr-transparent"><span>휴대폰인증으로 가입하기</span></a>
             </div>
           </section>
         </main>
