--- a/html/products/cart.html
+++ b/html/products/cart.html
@@ -75,8 +75,8 @@
           <!-- 하단 고정 버튼(s) -->
           <div class="btn-wrap btm-fixed">
             <div class="btn-flex">
-              <a href="./order.html" class="btn no-radius btype-big btclr-gray900 fl1"><span class="btnico ico-keypad">입력하여 주문하기</span></a>
-              <a href="./list_living.html" class="btn btype-big btclr-accent no-radius fl2"><span>메인으로 이동</span></a>
+              <a href="./list_beauty.html" class="btn no-radius btype-big btclr-gray900 fl1"><span>메인으로</span></a>
+              <a href=./order.html" class="btn btype-big btclr-accent no-radius fl2"><span>음성으로 주문하기</span></a>
             </div>
           </div>
           <!--// 하단 고정 버튼(e) -->
