--- a/html/products/view.html
+++ b/html/products/view.html
@@ -13,13 +13,10 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="whispers shop" />
     <meta property="og:description" content="소수자를 위한 쇼핑몰" />
-    <meta property="og:image" content="/resources/images/og_img.png" />
+    <meta property="og:image" content="og_img.png" />
     <meta property="og:url" content="https://www.whispers.com/" />
     <meta property="og:site_name" content="www.whispers.com" />
     <link rel="stylesheet" href="../../resources/css/style.css" />
-
-    <link rel="stylesheet" href="../../resources/plugins/swiper/swiper.min.css" />
-    <script src="../../resources/plugins/swiper/swiper.min.js"></script>
     <script src="../../resources/js/ui.js" defer></script>
   </head>
   <body>
@@ -33,9 +30,11 @@
       <div class="container">
         <h1>소수자를 위한 쇼핑몰 | whispers shop</h1>
         <header id="header">
-          <button type="button" class="menu-btn" aria-expanded="false" aria-label="전체메뉴">
-            <span>전체메뉴</span>
-          </button>
+          <div class="head-wrap">
+            <button type="button" class="menu-btn" aria-expanded="false" aria-label="전체메뉴">
+              <span>전체메뉴</span>
+            </button>
+          </div>
         </header>
         <main id="contents">
           <div class="product-detail">
