--- a/html/products/order.html
+++ b/html/products/order.html
@@ -22,7 +22,7 @@
     <script src="../../resources/plugins/swiper/swiper.min.js"></script>
     <script src="../../resources/js/ui.js" defer></script>
   </head>
-  <body>
+  <body class="body-order">
     <!-- 스킵네비게이션 영역(s) -->
     <div id="skipNavigation">
       <a href="#contents">본문 바로가기</a>
