--- a/html/products/cart.html
+++ b/html/products/cart.html
@@ -14,8 +14,8 @@
     <meta property="og:title" content="whispers shop" />
     <meta property="og:description" content="소수자를 위한 쇼핑몰" />
     <meta property="og:image" content="/resources/images/og_img.png" />
-    <meta property="og:url" content="https://www.whispers.com/" />
-    <meta property="og:site_name" content="www.whispers.com" />
+    <meta property="og:url" content="https://swipershop.netlify.app/" />
+    <meta property="og:site_name" content="swipershop.netlify.app" />
     <link rel="stylesheet" href="../../resources/css/style.css" />
 
     <link rel="stylesheet" href="../../resources/plugins/swiper/swiper.min.css" />
@@ -76,7 +76,7 @@
           <div class="btn-wrap btm-fixed">
             <div class="btn-flex">
               <a href="./list_beauty.html" class="btn no-radius btype-big btclr-gray900 fl1"><span>메인으로</span></a>
-              <a href=./order.html" class="btn btype-big btclr-accent no-radius fl2"><span>음성으로 주문하기</span></a>
+              <a href="./order.html" class="btn btype-big btclr-accent no-radius fl2"><span>음성으로 주문하기</span></a>
             </div>
           </div>
           <!--// 하단 고정 버튼(e) -->
