--- a/html/setup/size.html
+++ b/html/setup/size.html
@@ -14,8 +14,8 @@
     <meta property="og:title" content="whispers shop" />
     <meta property="og:description" content="소수자를 위한 쇼핑몰" />
     <meta property="og:image" content="/resources/images/og_img.png" />
-    <meta property="og:url" content="https://www.whispers.com/" />
-    <meta property="og:site_name" content="www.whispers.com" />
+    <meta property="og:url" content="https://swipershop.netlify.app/" />
+    <meta property="og:site_name" content="swipershop.netlify.app" />
     <link rel="stylesheet" href="../../resources/css/style.css" />
 
     <link rel="stylesheet" href="../../resources/plugins/swiper/swiper.min.css" />
