--- a/html/products/list_beauty.html
+++ b/html/products/list_beauty.html
@@ -33,13 +33,13 @@
       <div class="container">
         <h1>소수자를 위한 쇼핑몰 | whispers shop</h1>
         <header id="header">
-          <button type="button" class="menu-btn" aria-expanded="false" aria-label="전체메뉴">
+          <button type="button" class="menu-btn" aria-expanded="false">
             <span>전체메뉴</span>
           </button>
         </header>
         <main id="contents">
           <section class="sector-category cate3">
-            <h3 class="category-tit" aria-label="카테고리">뷰티</h3>
+            <h3 class="category-tit"><span class="blind">카테고리</span> 뷰티</h3>
           </section>
           <section class="prodlist-wrap">
             <h3 class="blind">상품목록</h3>
@@ -51,7 +51,7 @@
                       <div class="smt">올리브영</div>
                       아비브 부활초 크림 뉴트리션 튜 75ml
                     </h4>
-                    <div class="price">23,280<span class="blind">원</span></div>
+                    <div class="price"><span class="blind">구매가격</span> 23,280<span class="blind">원</span></div>
                   </div>
                   <figure class="product-img">
                     <img src="../../resources/images/product/product_img1.png" alt="아비브 부활초 크림 뉴트리션 튜 75ml 제품이미지" />
