--- a/html/products/view.html
+++ b/html/products/view.html
@@ -31,7 +31,7 @@
         <h1>소수자를 위한 쇼핑몰 | whispers shop</h1>
         <header id="header">
           <div class="head-wrap">
-            <button type="button" class="menu-btn" aria-expanded="false" aria-label="전체메뉴">
+            <button type="button" class="menu-btn" aria-expanded="false">
               <span>전체메뉴</span>
             </button>
           </div>
@@ -39,13 +39,16 @@
         <main id="contents">
           <div class="product-detail">
             <section class="sector-detail cate1">
-              <h3 class="category-tit" aria-label="카테고리">생활건강</h3>
+              <h3 class="category-tit"><span class="blind">카테고리</span> 생활건강</h3>
               <section class="detail-title">
                 <h4>
                   <div class="smt">동구밭 지구살림</div>
                   귤 천연 설거지 비누 워싱바
                 </h4>
-                <div class="price">4,500원</div>
+                <div class="price">
+                  <span class="blind">구매가격</span>
+                  4,500원
+                </div>
               </section>
 
               <!-- 제품이미지 영역(s) -->
