--- a/html/products/list_food.html
+++ b/html/products/list_food.html
@@ -33,13 +33,13 @@
       <div class="container">
         <h1>소수자를 위한 쇼핑몰 | whispers shop</h1>
         <header id="header">
-          <button type="button" class="menu-btn" aria-expanded="false" aria-label="전체메뉴">
+          <button type="button" class="menu-btn" aria-expanded="false">
             <span>전체메뉴</span>
           </button>
         </header>
         <main id="contents">
           <section class="sector-category cate1">
-            <h3 class="category-tit" aria-label="카테고리">식품</h3>
+            <h3 class="category-tit"><span class="blind">카테고리</span> 식품</h3>
           </section>
           <section class="prodlist-wrap">
             <h3 class="blind">상품목록</h3>
@@ -51,7 +51,7 @@
                       <div class="smt">동구밭 지구살림</div>
                       클래식 우유식빵
                     </h4>
-                    <div class="price">13,000<span class="blind">원</span></div>
+                    <div class="price"><span class="blind">구매가격</span> 13,000<span class="blind">원</span></div>
                   </div>
                 </a>
               </li>
@@ -62,7 +62,7 @@
                       <div class="smt">동구밭 지구살림</div>
                       DOLE 실속 바나나 1kg
                     </h4>
-                    <div class="price">8,000<span class="blind">원</span></div>
+                    <div class="price"><span class="blind">구매가격</span> 8,000<span class="blind">원</span></div>
                   </div>
                 </a>
               </li>
@@ -73,7 +73,7 @@
                       <div class="smt">마켓컬리</div>
                       표고버섯 100g
                     </h4>
-                    <div class="price">2,490<span class="blind">원</span></div>
+                    <div class="price"><span class="blind">구매가격</span> 2,490<span class="blind">원</span></div>
                   </div>
                 </a>
               </li>
