--- a/html/products/list_living.html
+++ b/html/products/list_living.html
@@ -33,13 +33,13 @@
       <div class="container">
         <h1>소수자를 위한 쇼핑몰 | whispers shop</h1>
         <header id="header">
-          <button type="button" class="menu-btn" aria-expanded="false" aria-label="전체메뉴">
+          <button type="button" class="menu-btn" aria-expanded="false">
             <span>전체메뉴</span>
           </button>
         </header>
         <main id="contents">
           <section class="sector-category cate2">
-            <h3 class="category-tit" aria-label="카테고리">생활건강</h3>
+            <h3 class="category-tit"><span class="blind">카테고리</span> 생활건강</h3>
           </section>
           <section class="prodlist-wrap">
             <h3 class="blind">상품목록</h3>
@@ -51,7 +51,7 @@
                       <div class="smt">동구밭 지구살림</div>
                       귤 천연 설거지 비누 워싱바
                     </h4>
-                    <div class="price">13,000<span class="blind">원</span></div>
+                    <div class="price"><span class="blind">구매가격</span> 13,000<span class="blind">원</span></div>
                   </div>
                   <figure class="product-img">
                     <img src="../../resources/images/product/product_img1.png" alt="동구밭 풋귤 설거지 비누 DONGGUBAT Green Tangerine Dish Soap 100g 위생용품 제품이미지" />
@@ -65,7 +65,7 @@
                       <div class="smt">부케가르니</div>
                       부케가르니 에코 클리어 세탁 액상세제
                     </h4>
-                    <div class="price">23,280<span class="blind">원</span></div>
+                    <div class="price"><span class="blind">구매가격</span> 23,280<span class="blind">원</span></div>
                   </div>
                   <figure class="product-img">
                     <img src="../../resources/images/product/product_img4.png" alt="부케가르니 에코 클리어 세탁 액상세제 제품이미지" />
@@ -79,7 +79,7 @@
                       <div class="smt">부케가르니</div>
                       부케가르니 나드 구취케어 치약 100g, 3개
                     </h4>
-                    <div class="price">23,280<span class="blind">원</span></div>
+                    <div class="price"><span class="blind">구매가격</span> 23,280<span class="blind">원</span></div>
                   </div>
                   <figure class="product-img">
                     <img src="../../resources/images/product/product_img5.png" alt="부케가르니 나드 구취케어 치약 100g 제품이미지" />
