--- a/html/setup/size.html
+++ b/html/setup/size.html
@@ -33,7 +33,7 @@
       <div class="container">
         <h1>소수자를 위한 쇼핑몰 | whispers shop</h1>
         <header id="header">
-          <button type="button" onclick="location.href='./screen_mode.html';" class="menu-btn" aria-expanded="false" aria-label="전체메뉴">
+          <button type="button" class="menu-btn" aria-expanded="false">
             <span>전체메뉴</span>
           </button>
         </header>
@@ -41,60 +41,71 @@
           <dl class="list-bt">
             <dt>
               <div class="current-fs">
-                <span class="blind">현재 글자크기</span>
+                <span class="blind">현재 글자크기 보통</span>
                 나는 열 개의 눈동자를 가졌다.<br />
                 손병걸
               </div>
               <div class="blind">글자크기 선택</div>
             </dt>
             <dl>
-              <button type="button" onclick="location.href='./screen_mode.html';" class="bt-select fs14 current" aria-label="글자크기 작게" aria-selected="true">
+              <button type="button" onclick="location.href='./screen_mode.html';" class="bt-select fs14" aria-selected="false">
                 <div>
+                  <span class="blind">글자크기 작게</span>
                   직접 보지 않으면<br />
                   믿지 않고 살아왔다
                 </div>
               </button>
             </dl>
             <dl>
-              <button type="button" onclick="location.href='./screen_mode.html';" class="bt-select fs16" aria-label="글자크기 보통" aria-selected="false">
+              <button type="button" onclick="location.href='./screen_mode.html';" class="bt-select fs16 current" aria-selected="true">
                 <div>
+                  <span class="blind">글자크기 보통</span>
                   시력을 잃어버린 순간까지<br />
                   두 눈동자를 굴렸다
                 </div>
               </button>
             </dl>
             <dl>
-              <button type="button" onclick="location.href='./screen_mode.html';" class="bt-select fs18" aria-label="글자크기 크게" aria-selected="false">
+              <button type="button" onclick="location.href='./screen_mode.html';" class="bt-select fs18" aria-selected="false">
                 <div>
+                  <span class="blind">글자크기 크게</span>
                   눈동자는 쪼그라들어가고<br />
                   부딪히고 넘어질 때마다
                 </div>
               </button>
             </dl>
             <dl>
-              <button type="button" onclick="location.href='./screen_mode.html';" class="bt-select fs20" aria-label="글자크기 더 크게" aria-selected="false">
+              <button type="button" onclick="location.href='./screen_mode.html';" class="bt-select fs20" aria-selected="false">
                 <div>
+                  <span class="blind">글자크기 더 크게</span>
                   두 손으로<br />
                   바닥을 더듬었는데
                 </div>
               </button>
             </dl>
             <dl>
-              <button type="button" onclick="location.href='./screen_mode.html';" class="bt-select fs24" aria-label="글자크기 더욱더 크게" aria-selected="false">
+              <button type="button" onclick="location.href='./screen_mode.html';" class="bt-select fs24" aria-selected="false">
                 <div>
+                  <span class="blind">글자크기 더욱더 크게</span>
                   짓무른 손가락 끝에서<br />
                   뜬금없이 열리는 눈동자
                 </div>
               </button>
             </dl>
             <dl>
-              <button type="button" onclick="location.href='./screen_mode.html';" class="bt-select fs30" aria-label="글자크기 더더욱더 크게" aria-selected="false">
-                <div>그즈음 나는 확인하지 않아도 믿는 이유를 배웠다</div>
+              <button type="button" onclick="location.href='./screen_mode.html';" class="bt-select fs30" aria-selected="false">
+                <div>
+                  <span class="blind">글자크기 더더욱더 크게</span>
+                  그즈음 나는 확인하지 않아도 믿는 이유를 배웠다
+                </div>
               </button>
             </dl>
             <dl>
-              <button type="button" onclick="location.href='./screen_mode.html';" class="bt-select fs34" aria-label="글자크기 최대 크게" aria-selected="false">
-                <div>스치키만 하여도 환해지는 열 개의 눈동자를 떴다</div>
+              <button type="button" onclick="location.href='./screen_mode.html';" class="bt-select fs34" aria-selected="false">
+                <div>
+                  <span class="blind">글자크기 최대 크게</span>
+                  스치키만 하여도 환해지는 열 개의 눈동자를 떴다
+                </div>
               </button>
             </dl>
           </dl>
