--- a/html/_guide/guide.html
+++ b/html/_guide/guide.html
@@ -1375,35 +1375,30 @@
 
             <!-- 페이지 가이드(s) -->
             <section id="directoryInfo" role="tabpanel" aria-labelledby="페이지 가이드" tabindex="0" style="display: none">
-              <h3>안내</h3>
-              <div class="box_content type2"><span class="font_color01">주요 페이지</span>에 대한 가이드를 제공한다.</div>
-              <h3>기본폴더 구조</h3>
-              <div class="example box_content type2"><span class="font_color01">폴더구조</span>는 별도 협의된 구조가 없는 관계로 아래의 폴더구조로 제작되었으며, 필요시<span class="font_color01"> 변경 및 추가 </span>될 수 있있다.</div>
+              <h3>작업의도</h3>
+              <ol class="numlist">
+                <li>
+                  <h5>1. 정보는 심플하게 텍스트 위주의 구성</h5>
+                  <p>음성인식과 청각을 활용하고 이미지보다는 <span class="font_color01">텍스트 위주의 정보를 전달</span>하는 인터페이스를 사용한다.</p>
+                </li>
+                <li>
+                  <h5>2. 초점 파악이 용이하도록 구성</h5>
+                  <img src="../_guide/assets/images/img_makeup1.png" alt="" />
+                  <p>초점위치가 한눈에 보이도록 두껍게 구성하였다.</p>
+                </li>
+                <li>
+                  <h5>3. 저 시력자나 위한 다크모드 구성</h5>
+                  <p>중복된 타이틀을 모든 페이지에 적용하는 것이 아니라, 페이지마다 페이지에 알맞은 고유의 제목이 있어야 합니다.</p>
+                </li>
+              </ol>
+              <h4></h4>
 
-              <h3>폴더 구조</h3>
-              <div class="example box_content type3">
-                <ul class="jqueryFileTree">
-                  <li class="directory">
-                    html
-                    <ul class="jqueryFileTree">
-                      <li class="directory">intro</li>
-                      <li class="directory">products</li>
-                      <li class="directory">setup</li>
-                    </ul>
-                  </li>
-                  <li class="directory">
-                    resources
-                    <ul class="jqueryFileTree">
-                      <li class="directory">css</li>
-                      <li class="directory">fonts</li>
-                      <li class="directory">images</li>
-                      <li class="directory">js</li>
-                      <li class="directory">plugins</li>
-                      <li class="directory">scss</li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
+              <h3>주요페이지 별 작업의도</h3>
+              <h4>html/products/view.html (상품 상세보기) <a href="../products/view.html" class="btn1" style="margin-left: 6px" target="_blank" title="새창열림">페이지 바로가기</a></h4>
+              <div>페이지 내 상품 상세설명은 <span class="font_color01">이미지 사용을 최소화 하고 텍스트 위주</span>로 배치하도록 관리자에서 제한을 둔다. 이미지 내의 텍스트 경우 <span class="font_color01">광학 문자 인식(OCR)</span> API를 적용하여 텍스트를 제공한다.</div>
+
+              <h4>html/products/order.html (음성 주문하기) <a href="../products/order.html" class="btn1" style="margin-left: 6px" target="_blank" title="새창열림">페이지 바로가기</a></h4>
+              <div><span class="font_color01">음성AI 적용</span>으로 상품에 대한 <span class="font_color01">상세 옵션, 갯수, 배송지, 기존에 설정해 둔 결제방식</span>을 선택하여 주문하는 방식을 시연한 페이지이다.</div>
             </section>
             <!--// 페이지 가이드(e) -->
           </div>
