가이드 작업4

--- a/html/_guide/ia.html
+++ b/html/_guide/ia.html
@@ -27,7 +27,9 @@
         <div class="hdd"><a href="ia.html">IA</a></div>
         <nav class="navs"></nav>
         <dl class="list">
-          <dt><a href="javascript:;">IA목록</a></dt>
+          <dt>
+            <a href="javascript:;">IA목록</a> <span class="author"><em>디자인 : 전영준</em></span> <span class="author"><em>퍼블 : 이종원</em></span>
+          </dt>
           <dd>
             <include src="ia_cate_01.html"></include>
           </dd>
