--- a/html/_guide/guide.html
+++ b/html/_guide/guide.html
@@ -1387,11 +1387,10 @@
                   <p>초점위치가 한눈에 보이도록 두껍게 구성하였다.</p>
                 </li>
                 <li>
-                  <h5>3. 저 시력자나 위한 다크모드 구성</h5>
-                  <p>중복된 타이틀을 모든 페이지에 적용하는 것이 아니라, 페이지마다 페이지에 알맞은 고유의 제목이 있어야 합니다.</p>
+                  <h5>3. 저 시력자나 노인을 위한 큰글자/다크모드 구성</h5>
+                  <img src="../_guide/assets/images/img_makeup2.png" alt="" />
                 </li>
               </ol>
-              <h4></h4>
 
               <h3>주요페이지 별 작업의도</h3>
               <h4>html/products/view.html (상품 상세보기) <a href="../products/view.html" class="btn1" style="margin-left: 6px" target="_blank" title="새창열림">페이지 바로가기</a></h4>
